# kdailynote

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  REPONOTES.txt  TODO.md
src/: CMakeLists.txt  dayeditor.cpp  dayeditor.h  diaryeditor.cpp  diaryeditor.h  diarywindow.cpp  diarywindow.h  main.cpp
src/tests/: testdiaryeditor.cpp
